--- a/package.json
+++ b/package.json
@@ -27,10 +27,12 @@
     "eslint-plugin-import": "^2.22.0",
     "eslint-plugin-jsx-a11y": "^6.3.1",
     "eslint-plugin-react": "^7.20.1",
+    "eslint-plugin-react-hooks": "^4.0.5",
     "parcel-bundler": "^1.12.4",
     "prettier": "^2.0.5"
   },
   "dependencies": {
+    "@frontendmasters/pet": "^1.0.3",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
   }
